# weave

./: .gitignore  Cargo.toml  README.md
benchmarks/git/: results.json
benchmarks/git/8c13c314_odb.h/: weave
benchmarks/git/9a85fa84_imap-send.c/: weave
benchmarks/git/9fab7ec7_odb.h/: weave
benchmarks/git/c62d2d38_gpg-interface.c/: weave
benchmarks/git/d627023d_packfile.h/: weave
benchmarks/git/dbe54273_object-file.h/: weave
benchmarks/git/ecf2f52f_add-interactive.c/: weave
benchmarks/git/ecf2f52f_builtin_gc.c/: weave
benchmarks/git/ecf2f52f_builtin_pack-refs.c/: weave
benchmarks/git/ecf2f52f_compat_mingw.c/: weave
benchmarks/git/ecf2f52f_imap-send.c/: weave
benchmarks/git/ee270059_refs.h/: weave
benchmarks/git/fd13909e_odb.h/: weave
crates/weave-cli/: Cargo.toml
crates/weave-cli/src/: main.rs
crates/weave-cli/src/commands/: bench.rs  bench_repo.rs  claim.rs  mod.rs  preview.rs  release.rs  setup.rs  status.rs
crates/weave-core/: Cargo.toml
crates/weave-core/src/: conflict.rs  git.rs  lib.rs  merge.rs  region.rs  validate.rs
crates/weave-core/tests/: integration.rs
crates/weave-crdt/: Cargo.toml
crates/weave-crdt/src/: error.rs  lib.rs  ops.rs  state.rs  sync.rs
crates/weave-crdt/tests/: crdt_ops.rs
crates/weave-driver/: Cargo.toml
crates/weave-driver/src/: main.rs
crates/weave-mcp/: Cargo.toml
crates/weave-mcp/src/: main.rs  server.rs  tools.rs
docs/: changelog.html  docs.html  index.html  learn.html  llms.txt
site/public/: llms.txt
site/src/app/: page.tsx
