[package]
name = "weave-cli"
version = "0.1.3"
edition = "2021"

[dependencies]
weave-core = { path = "../weave-core" }
weave-crdt = { path = "../weave-crdt" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.3" }
clap = { version = "4", features = ["derive"] }
colored = "2"
diffy = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
