[package]
name = "weave-driver"
version = "0.1.2"
edition = "2021"

[dependencies]
weave-core = { path = "../weave-core" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", version = "0.3" }
weave-crdt = { path = "../weave-crdt", optional = true }
env_logger = "0.11"
log = "0.4"

[features]
crdt = ["weave-crdt"]
