[package]
name = "weave-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weave-mcp"
path = "src/main.rs"

[dependencies]
weave-core = { path = "../weave-core" }
weave-crdt = { path = "../weave-crdt" }
sem-core = { path = "../../../sem/crates/sem-core" }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
